terraform-aws-mastery/Phase 3 - Real AWS Infrastructure/22d-eks-single-service/src/k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
